--- a/codepen/2/index.html
+++ b/codepen/2/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Velox Zerda Lagopus</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<p>velox</p>
-<p>zerda</p>
-<p>lagopus</p>
-<!-- partial -->
-  
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CodePen - Velox Zerda Lagopus</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <!-- partial:index.partial.html -->
+    <p>velox</p>
+    <p>zerda</p>
+    <p>lagopus</p>
+    <!-- partial -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="scripts.js"></script>
+  </body>
 </html>
