New github index, gallery app project v3.

--- a/index.html
+++ b/index.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4. Műhelymunka - VS Code és GitHub feladat</title>
-    <link rel="stylesheet" href="/codepen/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
-</head>
-<body>
-
-  <div class="lnk">
-    <footer>
-        <img src="greenfoxlogo.jpg" alt="GreenFox logo">
-      </footer>
-    <h1>A codepen.io-ról átimportált GreenFoxos gyakorlatok:</h1>
-    <a href="/codepen/1/index.html">1</a>
-    <a href="/codepen/2/index.html">2</a>
-    <a href="/codepen/3/index.html">3</a>
-    <a href="/codepen/4/index.html">4</a>
-    <a href="/codepen/5/index.html">5</a>
-    <a href="/codepen/6/index.html">6</a>
-    <a href="/codepen/7/index.html">7</a>
-    <a href="/codepen/8/index.html">8</a>
-    <a href="/codepen/9/index.html">9</a>
-    <a href="/codepen/10/index.html">10</a>
-    <a href="/codepen/11/index.html">11</a>
-    <a href="/codepen/12/index.html">12</a>
-    <a href="/codepen/13/index.html">13</a>
-    <a href="/codepen/14/index.html">14</a>
-    <a href="/codepen/15/index.html">15</a>
-    <a href="/codepen/16/index.html">16</a>
-    <a href="/codepen/17/index.html">17</a
-  </div>  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap"
+      rel="stylesheet"
+    />
+    <title>Photo Gallery App v.1</title>
+  </head>
+  <body>
+    <main>
+      <div id="slide">
+        <nav id="back">
+          <img src="./img/arrow.svg" alt="" />
+        </nav>
+        <div id="photos">
+          <img id="picture" src="img/1.jpg" alt="" /> </img>
+          <div id="gray-container">
+            <h1 id="phototitle">Careers</h1>
+            <p id="descript">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <nav id="forward">
+          <img src="./img/arrow.svg" alt="" />
+        </nav>
+    </main>
+    <div id="thumbnails">
+          <img class="smallpic" src="./img/0.jpg" alt=""></img>
+          <img class="smallpic" src="./img/1.jpg" alt=""></img>
+          <img class="smallpic" src="./img/2.jpg" alt=""></img>
+          <img class="smallpic" src="./img/3.jpg" alt=""></img>
+          <img class="smallpic" src="./img/4.jpg" alt=""></img>
+          <img class="smallpic" src="./img/5.jpg" alt=""></img>
+          <img class="smallpic" src="./img/6.jpg" alt=""></img>
+          <img class="smallpic" src="./img/7.jpg" alt=""></img>
+    </div>
+ 
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="./script.js"></script>
+  </body>
 </html>
