--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
           <img class="smallpic" src="./img/6.jpg" alt=""></img>
           <img class="smallpic" src="./img/7.jpg" alt=""></img>
     </div>
+
+    <div id="textbox">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+    </div>
  
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="./script.js"></script>
